Always optimize for size (even in debug mode)
This is necessary for the AVR target, since the selected MCU only pro-
vides 8kB of program memory. Since those targets don't have support for
unwinding, the panic-mode "abort" is chosen.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
+[profile.dev]
+opt-level = "s"
+overflow-checks = false
+panic = "abort"
+
+[profile.release]
+opt-level = "s"
+overflow-checks = false
+panic = "abort"
+
 [dependencies]
