--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ overflow-checks = false
 panic = "abort"
 
 [dependencies]
-avr-device = { version = "0.6.0", features = ["attiny85"] }
+avr-device = { version = "0.6.0", features = ["attiny85", "rt"] }
